# Minecraft

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  main.cpp  make.bash
Assets/: bar.aseprite  block design.aseprite  item.json
Assets/BlockData/: block.json
Assets/Config/: Config.json
Assets/Crafting/: crafting.json
Assets/HealthBar/: food.aseprite
Assets/Inventory/: fake body.aseprite  inventory lmao.aseprite
Assets/Model/ghost-creeper/source/: model.gltf
Assets/SoundEffect/: Breaking.pkf  WaterStep.pkf
FreeType/objs/: freetype.exp
FreeType/objs/x64/Debug/: freetype.dll.recipe  freetype.vcxproj.FileListAbsolute.txt
FreeType/objs/x64/Debug/freetype.tlog/: link.command.1.tlog  rc.read.1.tlog
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
Minecraft-master/Minecraft-master/--build/: CMakeCache.txt
Minecraft-master/Minecraft-master/--build/_3rdParty/Hunter/config-id/: config.cmake.NOLF
Minecraft-master/Minecraft-master/--build/_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
Minecraft-master/Minecraft-master/--build/_3rdParty/Hunter/toolchain/_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HunterToolchain.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Script/: Algorithm.h  Application.cpp  Application.h  Config.cpp  Config.h  Entity.cpp  Entity.h  Mesh.h  Model.cpp  Model.h  Player.cpp  Player.h  Settings.cpp  Settings.h  Texture.cpp  Texture.h  game.cpp  game.h  main.cpp  shader.cpp
Script/Game/: Blocks.cpp  Blocks.h  Chunks.cpp  Chunks.h  Player.cpp  Player.h  game.cpp  game.h  mapGen.h  skybox.cpp  skybox.h  world.cpp  world.h
Script/Item/: ItemConst.cpp  ItemConst.h  ItemData.cpp  ItemDatabase.h  item.cpp  item.h  itemData.h  itemDataBase.cpp  itemDataBase.h  weapon.h
Script/Maths/: Frustum.cpp  Frustum.h  Ray.cpp  Ray.h
Script/Menu/: UIUtil.cpp  UIUtil.h  deathScene.cpp  deathScene.h  mainScreen.cpp  mainScreen.h  menu.cpp  menu.h  optionMenu.cpp  optionMenu.h
Script/Physic/: PhysicVariable.cpp  PhysicVariable.h  rigidbody.cpp  rigidbody.h
Script/Physics/: AABB.cpp  AABB.h  PhysicCons.cpp  PhysicCons.h
Script/Player/: InteractiveBox.cpp  InteractiveBox.h  Inventory.h  InventoryBox.cpp  InventoryBox.h  InventoryBuilder.h  InventoryHandBox.cpp  InventoryHandBox.h  InventoryManager.cpp  InventoryManager.h  InventorySection.cpp  InventorySection.h  player.cpp  player.h
Script/Player/Crafting/: Recipe.cpp  Recipe.h  crafting.json
Script/Player/HandModel/: BlockModel.cpp  BlockModel.h  HandModel.cpp  HandModel.h  ItemModel.cpp  ItemModel.h
Script/Player/Inventory/: InteractiveBox.cpp  InteractiveBox.h  Inventory.cpp  InventoryManager.cpp  InventoryManager.h  InventorySection.cpp  InventorySection.h
Script/Renderer/: AnimationBoxRenderer.cpp  AnimationBoxRenderer.h  ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  QuadRenderer.cpp  QuadRenderer.h  RenderInfo.h  RenderMaster.cpp  RenderMaster.h  Skybox.cpp  Skybox.h  SpriteRenderer.cpp  SpriteRenderer.h  hitbox.cpp  hitbox.h
Script/Resource/: PerlinNoise.cpp  PerlinNoise.h  ShaderLoad.cpp  ShaderLoad.h  TextureLoad.cpp  TextureLoad.h
Script/States/: Cursor.cpp  Cursor.h  MenuState.cpp  MenuState.h  PlayingState.cpp  PlayingState.h  SceneState.cpp  SceneState.h  StateBase.h  timer.cpp  timer.h
Script/Texture&Shader/: ShaderManager.cpp  ShaderManager.h  SoundEngine.cpp  SoundEngine.h  SoundManager.cpp  SoundManager.h  TextureAtlas.cpp  TextureAtlas.h  TextureBind.cpp  TextureBind.h  TextureManager.cpp  TextureManager.h
Script/Utils/: Camera.cpp  Camera.h  File.cpp  File.h  InteractiveBar.cpp  InteractiveBar.h  Random.h  Singleton.h  Texture.cpp  Texture.h  shader.cpp  shader.h
Script/World/: LightSource.h  World.cpp  World.h
Script/World/Block/: Block.cpp  Block.h  BlockData.cpp  BlockData.h  BlockDataBase.cpp  BlockDataBase.h  BlockID.h  BlockType.cpp  BlockType.h  ChunkBlock.cpp  ChunkBlock.h
Script/World/Chunk/: Chunk.h  ChunkBuilder.cpp  ChunkBuilder.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkSection.cpp  ChunkSection.h
Script/World/WorldGenerator/: Biome.h  Terrain.cpp  Terrain.h  structure.cpp  structure.h
Script/World/WorldGenerator/Biome/: Biome.h  Desert.cpp  Desert.h  Ocean.cpp  Ocean.h  grassland.cpp  grassland.h  highMountain.cpp  highMountain.h
Shader/: Chunk.fs  Screen.fs  block.fs  block.vs  clear.vs  fragment.fs  lightSource.fs  lightSource.vs  skybox.fs  skybox.vs  solid.fs  solid.vs  textShader.fs  water.fs
